tests/sksl/errors/Ossfuzz40660.glsl
### Compilation failed:

error: 1: unknown identifier 'f'
half i() { f[0 * (4, int4(3 `` -3689348940
           ^
error: 1: expected ')' to complete function arguments, but found '`'
half i() { f[0 * (4, int4(3 `` -3689348940
                            ^
error: 1: expected ')' to complete expression, but found '`'
half i() { f[0 * (4, int4(3 `` -3689348940
                             ^
error: 1: value is out of range for type 'int': 3689348940
half i() { f[0 * (4, int4(3 `` -3689348940
                                ^^^^^^^^^^
error: 2: expected ']' to complete array access expression, but found ''
error: 2: expected ';', but found ''
6 errors
